Highlighting appropriate link in navbar

--- a/views/all.html
+++ b/views/all.html
@@ -89,5 +89,8 @@
 {{#yield-scripts}}
 <script type="text/javascript" src="/js/chart.min.js"></script>
 <script type="text/javascript" src="/js/client.js"></script>
+<script>
+	$( '#polls-nav' ).addClass('active');
+</script>
 {{/yield-scripts}}
 
