--- a/views/includes/navbar.html
+++ b/views/includes/navbar.html
@@ -8,9 +8,9 @@
             </div>
             <nav class="nav-main">
                 <ul class="menu-cont">
-                    <li class="active"><a href="/">Home</a></li>
-                    <li><a href="/polls">Polls</a></li>
-                    <li><a href="/polls/create">Create Poll</a></li>
+                    <li id="home-nav"><a href="/">Home</a></li>
+                    <li id="polls-nav"><a href="/polls">Polls</a></li>
+                    <li id="create-poll-nav"><a href="/polls/create">Create Poll</a></li>
                 </ul>
             </nav>
 
