--- a/views/index.html
+++ b/views/index.html
@@ -119,7 +119,7 @@
 					</div>
 					<div class="col-md-3 col-cont animated" data-animation="fadeInRight" data-animation-delay="800">
 						<span class="icon-cont"><i class="fa fa-user-secret"></i></span>
-						<span class="count-txt">{{meta.activeUsers}}</span>
+						<span class="count-txt" id='active-users'>{{meta.activeUsers}}</span>
 						<hr>
 						<span class="count-btm">Active Users</span>
 					</div>
@@ -150,50 +150,29 @@
 <!-- ============================================================================== -->
 
 
-
-<!-- MODEL FOR CREATING POLL -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-	<div class="modal-content" ng-controller="appCtrl">
-	  <div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		<h4 class="modal-title" id="myModalLabel">Create A Poll</h4>
-	  </div>
-	  <div id="poll-creation" class="modal-body">
-			<div class="row" id="inputOptions">
-				<div class="col-md-12">
-					<input class="form-control" placeholder="What is the poll?" ng-model="poll.title">
-				</div>
-					<div class=" col-md-6">
-					<br>
-					   <input class="form-control col-md-6" placeholder="What is the first option?" ng-model="poll.option[0]">
-					</div>
-					<div class="col-md-6">
-					<br>
-					   <input class="form-control col-md-6" placeholder="What is the second option?" ng-model="poll.option[1]">
-					</div>
-			</div>
-			<div class="container">
-				<br>
-				  <button class="btn btn-primary btn-blue" addChoice>Add Option</button>
-			</div>
-
-	  </div>
-	  <div class="modal-footer">
-			<button class="btn btn-primary btn-blue" ng-click="addPoll()">Add Poll</button>
-	  </div>
-	</div>
-  </div>
-</div>
-<!-- =================================================================================== -->
-
 {{#yield-scripts}}
 	<script type="text/javascript" src="js/chart.min.js"></script><!-- chart js -->
 	<script src="/socket.io/socket.io.js"></script>
     <script type="text/javascript">
+    var socket, numUsers;
+
+    // numUsers = parseInt($( '#active-users' ).text(), 10);
+    $( '#home-nav' ).addClass('active');
+    socket = io();
+    socket.emit('index');
+
+    		socket.on('meta-connection', function (numUsers) {
+    			console.log('connected');
+    			$( '#active-users' ).text(numUsers);
+    		});
+
+    		socket.on('meta-disconnect', function (numUsers) {
+    			console.log('diconnect');
+    			console.log(numUsers);
+    			$( '#active-users' ).text(numUsers);
+    		});
             var myColor = ["#ECD078","#D95B43","#C02942","#542437","#53777A","#5B43B2","#245437"];
             var myData = [65,45,25,35,104,99,80];
-            var socket = io();
 
             function getTotal(){
                 var myTotal = 0;
