fixed footer on create page

--- a/views/create.html
+++ b/views/create.html
@@ -134,6 +134,20 @@
 		margin-bottom: 20px;
 		margin-top: 5px;
 	}
+	#company-name{
+		font-size: 40px;
+		font-family: 'Montserrat',sans-serif;
+		margin-top: 10px;
+		float: left;
+	}
+
+	.footer-text{
+		font-size: 20px;
+		padding-top: 0px;
+		font-family: 'Roboto', sans-serif;
+		font-weight: 300;
+		line-height: 24px;
+	}
 </style>
 {{/yield-styles}}
 
