--- a/views/index.html
+++ b/views/index.html
@@ -66,7 +66,6 @@
 				</ul>
 			</div>
 		</div>
-		<div class="banner-btm-img"><img src="img/buildings.png" alt=""></div>
 	</div>
 </section>
 <!-- ============================================================================= -->
@@ -95,59 +94,38 @@
 <!-- ======================================================================= -->
 
 <!--========================= STASTICAL AREA OF PAGE ========================-->
-	<section class="statistics-main">
-		<div class="solid-bg">
-			<div class="container">
-				<div class="row clearfix">
-					<div class="col-md-3 col-cont animated" data-animation="fadeInRight" data-animation-delay="200">
-						<span class="icon-cont"><i class="fa fa-heart"></i></span>
-						<span class="count-txt">{{meta.totalPolls}}</span>
-						<hr>
-						<span class="count-btm">Polls</span>
-					</div>
-					<div class="col-md-3 col-cont animated" data-animation="fadeInRight" data-animation-delay="400">
-						<span class="icon-cont"><i class="fa fa-star"></i></span>
-						<span class="count-txt" id="poll-submissions">{{meta.totalSubmissions}}</span>
-						<hr>
-						<span class="count-btm">Poll Submissions</span>
-					</div>
-					<div class="col-md-3 col-cont animated" data-animation="fadeInRight" data-animation-delay="600">
-						<span class="icon-cont"><i class="fa fa-map-marker"></i></span>
-						<span class="count-txt">108</span>
-						<hr>
-						<span class="count-btm">Votes</span>
-					</div>
-					<div class="col-md-3 col-cont animated" data-animation="fadeInRight" data-animation-delay="800">
-						<span class="icon-cont"><i class="fa fa-user-secret"></i></span>
-						<span class="count-txt" id='active-users'>{{meta.activeUsers}}</span>
-						<hr>
-						<span class="count-btm">Active Users</span>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-<!-- ========================================================================== -->
-
-
-<!--========================= SECTION FOR POPULAR POLLS ========================-->
-	<section class="services-main" id="services">
+<section class="statistics-main">
+	<div class="solid-bg">
 		<div class="container">
-			<h2 class="animated">Popular Polls</h2>
-			<div class="row service-all clearfix" ng-controller="appCtrl">
-				<div class="col-md-4 service-single" ng-repeat="eachPoll in polls | first: 3">
-					<canvas id="doughnut" class="chart chart-doughnut" data="eachPoll.data"
-					labels="eachPoll.labels"></canvas>
-					<h5>{% eachPoll.title %}</h5>
-					<div id="allPolls"></div>
-					<voteOptions></voteOptions>
+			<div class="row clearfix">
+				<div class="col-md-3 col-cont animated" data-animation="fadeInRight" data-animation-delay="200">
+					<span class="icon-cont"><i class="fa fa-heart"></i></span>
+					<span id="total-polls" class="count-txt">{{meta.totalPolls}}</span>
+					<hr>
+					<span class="count-btm">Polls</span>
+				</div>
+				<div class="col-md-3 col-cont animated" data-animation="fadeInRight" data-animation-delay="400">
+					<span class="icon-cont"><i class="fa fa-star"></i></span>
+					<span class="count-txt" id="poll-submissions">{{meta.totalSubmissions}}</span>
+					<hr>
+					<span class="count-btm">Votes</span>
+				</div>
+				<div class="col-md-3 col-cont animated" data-animation="fadeInRight" data-animation-delay="600">
+					<span class="icon-cont"><i class="fa fa-map-marker"></i></span>
+					<span class="count-txt">108</span>
+					<hr>
+					<span class="count-btm">Votes</span>
+				</div>
+				<div class="col-md-3 col-cont animated" data-animation="fadeInRight" data-animation-delay="800">
+					<span class="icon-cont"><i class="fa fa-user-secret"></i></span>
+					<span class="count-txt" id='active-users'>{{meta.activeUsers}}</span>
+					<hr>
+					<span class="count-btm">Active Users</span>
 				</div>
 			</div>
 		</div>
-	</section>
-<!-- =========================================================================== -->
-<!--=========================== FOOTER AREA OF PAGE =============================-->
-<!-- ============================================================================== -->
+	</div>
+</section>
 
 
 {{#yield-scripts}}
@@ -171,6 +149,12 @@
     			console.log(numUsers);
     			$( '#active-users' ).text(numUsers);
     		});
+
+    		socket.on('poll creation', function () {
+    			var totalPolls = parseInt( $('#total-polls').text() );
+    			totalPolls++;
+    			$( '#total-polls' ).text(totalPolls);
+    		})
             var myColor = ["#ECD078","#D95B43","#C02942","#542437","#53777A","#5B43B2","#245437"];
             var myData = [65,45,25,35,104,99,80];
 
