--- a/views/results.html
+++ b/views/results.html
@@ -204,7 +204,7 @@ div.chatArea{
 		/*margin-bottom: 10px;*/
 	}
 	 @media (max-width: 991px) {
-		 #pollTitle{
+		 #poll-title{
 			 font-size: 55px;
 		 }
 	}
@@ -221,11 +221,11 @@ div.chatArea{
 </style>
 {{/yield-styles}}
 
-	<h1 id="pollTitle"></h1>
+	<h1 id="poll-title"></h1>
 		<div class="pie-box container">
 				 	<div id="pollContainer" class="col-md-12">
 				 		<div class="col-md-3"></div>
-							<canvas class="single-result" id="poll-results" width="430" height="430"></canvas>
+							<canvas class="single-result" id="chart" width="430" height="430"></canvas>
 					</div>
 		</div>
 	<a class="twitter-share-button"
@@ -235,7 +235,7 @@ div.chatArea{
 	<div class="fb-share-button" id="share_button" data-layout="button_count">share</div>
 {{#yield-scripts}}
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-	<script src="/js/Chart.min.js"></script>
+	<script src="/js/chart.min.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="/js/client.js"></script>
 	<script type="text/javascript">
