changed footer href's

--- a/views/includes/footer.html
+++ b/views/includes/footer.html
@@ -25,8 +25,8 @@
             <!-- Start: Footer Address -->
             <div class="col-md-6 footer-address animated" data-animation="fadeInUp" data-animation-delay="600">
             	<ul class=" company-info pull-right">
-                	<li class="email"><a href="http://turnerlogic.com/">info@turnerlogic.com</a></li>
-                	<li class="phone"><a href="#">210-901-9955</a></li>
+                	<li class="email"><a href="mailto:info@turnerlogic.com">info@turnerlogic.com</a></li>
+                	<li class="phone"><a href="tel:+12109019955">210-901-9955</a></li>
                     <li class="address">112 E. Pecan Street, 10th Floor</li>
                 </ul>
             </div>
