changed href for company name

--- a/views/includes/footer.html
+++ b/views/includes/footer.html
@@ -4,7 +4,7 @@
 	<div class="container">
     	<div class="row clearfix">
         <div class="col-md-6">
-            <h2 id="company-name">Turner Logic</h2>
+            <a href="http://turnerlogic.com/"><h2 id="company-name">Turner Logic</h2></a>
         	<!-- Start: Footer About -->
             <div class="col-md-12 footer-about animated" data-animation="fadeInUp" data-animation-delay="400">
             	<p class="footer-text">We turn your great ideas into<br>real products.</p>
