changed index landing screen to include optional lettering and changed button text

--- a/views/index.html
+++ b/views/index.html
@@ -37,6 +37,9 @@
 	color: #1E9FB4;
 }
 
+#option-text{
+	margin: 0px;
+}
 </style>
 {{/yield-styles}}
 
@@ -61,7 +64,8 @@
 								</form>
 								</div>
 							</div>
-						<a id="poll-create-btn" href="/polls/create" class="button-large">Create</a>
+							<h1 id="option-text">or</h1>
+						<a id="poll-create-btn" href="/polls/create" class="button-large">Create a Poll</a>
 					</li>
 				</ul>
 			</div>
