--- a/views/index.html
+++ b/views/index.html
@@ -40,6 +40,10 @@
 #option-text{
 	margin: 0px;
 }
+
+#app-name{
+	margin-bottom: 40px;
+}
 </style>
 {{/yield-styles}}
 
@@ -50,7 +54,7 @@
 			<div class="container banner-area">
 				<ul class="slides clearfix">
 					<li>
-						<h1>Poll Geni<span id="period">.</span>us</h1>
+						<h1 id="app-name">Poll Geni<span id="period">.</span>us</h1>
 						<h5></h5>
 							<div class="row">
 								<div class="col-md-4 col-md-offset-4">
