--- a/views/index.html
+++ b/views/index.html
@@ -44,6 +44,9 @@
 #app-name{
 	margin-bottom: 40px;
 }
+#info-text{
+	line-height: 23px;
+}
 </style>
 {{/yield-styles}}
 
@@ -91,11 +94,13 @@
 				</div>
 					<h4>Polls for the People <br>
 						by the People</h4>
-					<p>Whether you're driven by curiosity or analytics, Pollgeni.us is the bespoke polling platform for you.
+					<div class="container">
+					<p id="info-text">Whether you're driven by curiosity or analytics, Pollgeni.us is the bespoke polling platform for you.
 					Tailor polls to your target demographic or submit questions to the anonymous masses and watch your
 					results update in real-time. Further engage your audience through the Pollgeni.us chat room
 					and read your participants' rationales. Share unique codes via Twitter and Facebook to redirect traffic to your poll.
 					Publish a series of polls to fine tune your data and differentiate the signal from the noise.</p>
+					</div>
 			</div>
 		</div>
 </section>
