changed meta-data icons

--- a/views/index.html
+++ b/views/index.html
@@ -112,13 +112,13 @@
 		<div class="container">
 			<div class="row clearfix">
 				<div class="col-md-3 col-cont animated" data-animation="fadeInRight" data-animation-delay="200">
-					<span class="icon-cont"><i class="fa fa-heart"></i></span>
+					<span class="icon-cont"><i class="fa fa-pie-chart fa-1x"></i></span>
 					<span id="total-polls" class="count-txt">{{meta.totalPolls}}</span>
 					<hr>
 					<span class="count-btm">Polls</span>
 				</div>
 				<div class="col-md-3 col-cont animated" data-animation="fadeInRight" data-animation-delay="400">
-					<span class="icon-cont"><i class="fa fa-star"></i></span>
+					<span class="icon-cont"><i class="fa fa-paper-plane fa-1x"></i></span>
 					<span class="count-txt" id="poll-submissions">{{meta.totalSubmissions}}</span>
 					<hr>
 					<span class="count-btm">Votes</span>
@@ -130,7 +130,7 @@
 					<span class="count-btm">Votes</span>
 				</div>
 				<div class="col-md-3 col-cont animated" data-animation="fadeInRight" data-animation-delay="800">
-					<span class="icon-cont"><i class="fa fa-user-secret"></i></span>
+					<span class="icon-cont"><i class="fa fa-users"></i></span>
 					<span class="count-txt" id='active-users'>{{meta.activeUsers}}</span>
 					<hr>
 					<span class="count-btm">Active Users</span>
