--- a/views/all.html
+++ b/views/all.html
@@ -44,9 +44,18 @@
 		}
 	}
 
+	.glyphicon {
+		font-size: 3em;
+		font-weight: bold;
+	}
+
+	.three-by-one {
+		margin: 10px 0px;
+	}
+
 </style>
 {{/yield-styles}}
-	<div class="holder container">
+<div class="holder container">
 	{{#polls}}
 			<div class="col-xs-4" style="text-align: center">
 				<p href="/polls/{{data.code}}/results" class="question">{{data.question}}</p>
@@ -54,7 +63,11 @@
 				<p hidden class="poll_code">{{data.code}}</p>
 			</div>
 	{{/polls}}
+	<div class="row" style="text-align: center">
+		<a href="/polls?page={{previous}}"><span class="glyphicon glyphicon-menu-left"></span></a>
+		<a href="/polls?page={{next}}"><span class="glyphicon glyphicon-menu-right"></span></a>
 	</div>
+</div>
 
 <script type="text/javascript">
 	var number = 0;
@@ -65,7 +78,7 @@
 		});
 
 		for(var i = 0; i < $('.col-xs-4').length; i+=3) {
-  			$('.col-xs-4').slice(i, i+3).wrapAll("<div class='row'><div class='container'></div></div>");
+  			$('.col-xs-4').slice(i, i+3).wrapAll("<div class='row'><div class='three-by-one container'></div></div>");
 		}
 		$(window).resize(function(){
 			if($(window).width() < 1200)
