put my site key back so make sure to ignore it and changed font-weight of #company-name

--- a/views/create.html
+++ b/views/create.html
@@ -139,6 +139,7 @@
 		font-family: 'Montserrat',sans-serif;
 		margin-top: 10px;
 		float: left;
+		font-weight: 700;
 	}
 
 	.footer-text{
@@ -164,7 +165,7 @@
 					</span>
 				<input type="text" class="form-control choice" id="choice" placeholder="Add a choice to your poll..." ng-model="choiceNew" required>
 				</div>
-				<div id="contact-recaptcha" class="g-recaptcha" data-sitekey="6LfMyQkTAAAAAAn4sMfHHYRHiFgARWdlMEmRLDcG"></div>
+				<div id="contact-recaptcha" class="g-recaptcha" data-sitekey="6LeW4QkTAAAAANyJgMpyr0NafMUq7LJsQD9Z67lT"></div>
 			</form>
 		</div>
 	</div>
