--- a/views/index.html
+++ b/views/index.html
@@ -66,7 +66,7 @@
 										<span class="input-group-btn">
 											<button id="search-btn" class="btn btn-default" type="submit"><span class='glyphicon glyphicon-search'></span></button>
 										</span>
-										<input id="search-input" type="text" class="form-control" name="code" placeholder="Enter a unique code...">
+										<input id="search-input" type="text" class="form-control" name="code" placeholder="Enter a unique code..." maxLength="5">
 									</div><!-- /input-group -->
 								</form>
 								</div>
