changed href to root

--- a/views/includes/navbar.html
+++ b/views/includes/navbar.html
@@ -3,7 +3,7 @@
         <div class="container clearfix">
 
             <div class="logo-area">
-                <a href="pollgeni.us" class="logo">Poll Geni<span style="color: white">.</span>us</a>
+                <a href="/" class="logo">Poll Geni<span style="color: white">.</span>us</a>
                 <a class="toggle-btn"><i class="fa fa-bars"></i></a>
             </div>
             <nav class="nav-main">
