--- a/views/layouts/default.html
+++ b/views/layouts/default.html
@@ -5,20 +5,20 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 		
-		    <meta charset="utf-8">
-    	<title>Poll Genius</title>
-    	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    	<meta name="description" content="">
-    	<meta name="keywords" content="">
+			<meta charset="utf-8">
+		<title>Poll Genius</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		<meta name="description" content="">
+		<meta name="keywords" content="">
 	
-    	<link rel="shortcut icon" href="img/favicon.ico">
+		<link rel="shortcut icon" href="img/favicon.ico">
 	
-    	<link type="text/css" rel="stylesheet" href="/css/bootstrap.css"><!-- bootstrap.css -->
-    	<link type="text/css" rel="stylesheet" href="/css/font-awesome.min.css"><!-- font-awesome -->
-    	<link type="text/css" rel="stylesheet" href="/css/animate.min.css"><!-- animate css -->
-    	<link type="text/css" rel="stylesheet" href="/css/order-form.css"><!-- animate css -->
-    	<link rel="stylesheet" type="text/css" href="/css/angular-chart.css"><!-- angular chart css -->
-    	<link type="text/css" rel="stylesheet" href="/css/style.css"><!-- page styling -->
+		<link type="text/css" rel="stylesheet" href="/css/bootstrap.css"><!-- bootstrap.css -->
+		<link type="text/css" rel="stylesheet" href="/css/font-awesome.min.css"><!-- font-awesome -->
+		<link type="text/css" rel="stylesheet" href="/css/animate.min.css"><!-- animate css -->
+		<link type="text/css" rel="stylesheet" href="/css/order-form.css"><!-- animate css -->
+		<link rel="stylesheet" type="text/css" href="/css/angular-chart.css"><!-- angular chart css -->
+		<link type="text/css" rel="stylesheet" href="/css/style.css"><!-- page styling -->
 	
 		<!-- Google Fonts -->
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
@@ -31,11 +31,11 @@
 		<div id="fb-root"></div>
 		<script>
 		  window.fbAsyncInit = function() {
-		    FB.init({
-		      appId      : '1090702837625972',
-		      xfbml      : true,
-		      version    : 'v2.4'
-		    });
+			FB.init({
+			  appId      : '1090702837625972',
+			  xfbml      : true,
+			  version    : 'v2.4'
+			});
 
 			// FB.getLoginStatus(function(response) {
 			//   if (response.status === 'connected') {
@@ -48,11 +48,11 @@
 
 		  };
 		  (function(d, s, id){
-		     var js, fjs = d.getElementsByTagName(s)[0];
-		     if (d.getElementById(id)) {return;}
-		     js = d.createElement(s); js.id = id;
-		     js.src = "//connect.facebook.net/en_US/sdk.js";
-		     fjs.parentNode.insertBefore(js, fjs);
+			 var js, fjs = d.getElementsByTagName(s)[0];
+			 if (d.getElementById(id)) {return;}
+			 js = d.createElement(s); js.id = id;
+			 js.src = "//connect.facebook.net/en_US/sdk.js";
+			 fjs.parentNode.insertBefore(js, fjs);
 		   }(document, 'script', 'facebook-jssdk'));
 		</script>
 
@@ -70,27 +70,20 @@
 		<script type="text/javascript" src="/js/jquery-scrollToFixed.js"></script><!-- Scroll To Fixed Js -->
 		<script type="text/javascript" src="/js/settings.js"></script><!-- Settings Js -->
 		<script type="text/javascript">
-    
-    $(window).resize(function(){
-
-        if ($(window).width() < 991)
-        {
-            $('ul.company-info').removeClass('pull-right').css('margin-right','45px');
-
-        } else {
-
-            $('ul.company-info').addClass('pull-right').css('margin-right','0px');
-
-        }
-      
-    });
-</script>
+			$(window).resize(function () {
+				if ($(window).width() < 991) {
+					$('ul.company-info').removeClass('pull-right').css('margin-right','45px');
+				} else {
+					$('ul.company-info').addClass('pull-right').css('margin-right','0px');
+				}
+			});
+		</script>
 
 <!-- for twitter api -->
 <script>
 	window.twttr = (function(d, s, id) {
 	  var js, fjs = d.getElementsByTagName(s)[0],
-	    t = window.twttr || {};
+		t = window.twttr || {};
 	  if (d.getElementById(id)) return t;
 	  js = d.createElement(s);
 	  js.id = id;
@@ -99,7 +92,7 @@
 	 
 	  t._e = [];
 	  t.ready = function(f) {
-	    t._e.push(f);
+		t._e.push(f);
 	  };
 	 
 	  return t;
