--- a/views/results.html
+++ b/views/results.html
@@ -42,6 +42,7 @@ p{
 }
 .col-md-12{
 	padding-top: 20px;
+	padding-left: 0px;
 }
 .col-md-6,.col-md-12{
 	padding-bottom: 20px;
@@ -184,7 +185,9 @@ li.col-md-6{
 	margin: 0px 0px;
 	padding: 0px 0px;
 	width: 25%;
-	float: left;
+	position: relative;
+	top: 0;
+	left: 0;
 }
 
 ul.pie-legend.col-md-4{
@@ -197,6 +200,10 @@ ul.pie-legend.col-md-4{
 	font-family: 'Montserrat',sans-serif;
 	margin-top: 10px;
 	float: left;
+}
+
+.legend-wrapper {
+	margin: 3px 0px;
 }
 
 .footer-text{
@@ -217,6 +224,10 @@ ul.pie-legend.col-md-4{
 	margin-right: 10px;
 	/*margin-bottom: 10px;*/
 }
+
+.media-container {
+	text-align: center;
+}
 @media (max-width: 991px) {
 	 #poll-title{
 		 font-size: 55px;
@@ -235,23 +246,29 @@ div.col-md-8{
 	border: 3px white solid;
 }
 .social-media {
-	margin: 5px 0px;
+
+}
+.media-wrapper {
+	float: left;
+	margin: 4px 0px;
 }
 </style>
 {{/yield-styles}}
 	<h1 id="poll-title"></h1>
 		<div class="pie-box container">
-				 	<div id="pollContainer" class="col-md-12">
+				 	<div id="pollContainer">
 						<canvas class="single-result" id="chart" width="430" height="430"></canvas>
 					</div>
 		</div>
-		<div class="container">
+		<div class="container media-container">
 			<div class="row">
-				<div class="col-md-1 social-media">
-					<a class="twitter-share-button" href="pollgeni.us" data-url="pollgeni.us" >Tweet</a>
-				</div>
-				<div class="col-md-1 social-media">
-					<div class="fb-share-button" id="share_button" data-layout="button_count">share</div>
+				<div class="col-xs-2 social-media">
+					<div class="media-wrapper clearfix">
+						<a style="margin-bottom: 5px" class="twitter-share-button" href="pollgeni.us" data-url="pollgeni.us" >Tweet</a>
+					</div>
+					<div class="media-wrapper clearfix">
+						<div class="fb-share-button" id="share_button" data-layout="button_count">share</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -265,11 +282,11 @@ div.col-md-8{
 			$(window).resize(function(){
 				if ($(window).width() < 480)
 				{
-					$('#poll-results').css("width", "360").css('height', "360");
+					$('#chart').css("width", "360").css('height', "360");
 				}
 				else
 				{
-					$('#poll-results').css("width", "460").css('height', "460");
+					$('#chart').css("width", "460").css('height', "460");
 				}
 			});
 			var code = window.location.pathname.toString().split('/')[2];
