--- a/views/create.html
+++ b/views/create.html
@@ -1,155 +1,7 @@
 {{#yield-styles}}
-<link rel="stylesheet" href="/css/bootstrap.min.css">
-<link rel="stylesheet" href="/fonts/fontawesome-webfont.ttf">
-<link href='http://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
-<style>
-	html{
-		background-color: #2C303F;
-	}
-	#question, #choice {
-		height: 60px;
-		border: 3px solid rgb(30, 159, 180);
-	}
-
-	#question{
-		border-radius: 5px;
-		box-shadow: 0 7px 7px -5px gray;
-	}
-
-	#choice{
-		border-radius: 0px 5px 5px 0px;
-	}
-
-	body {
-		font-family: 'Raleway', sans-serif;
-		background-color: #2C303F;
-	}
-
-	input[type="text"] {
-		font-size: 16px;
-		font-family: 'Raleway', sans-serif;
-		outline: none;
-	}
-
-	input:focus {
-		outline: 0;
-	}
-
-	#question {
-		padding-left: 20px;
-	}
-
-	#poll-submit {
-		color: #EEB902;
-		background-color: white;
-		border-radius: 5px 0px 0px 5px;
-		border: 3px solid #EEB902;
-		box-shadow: 0 7px 7px -5px gray;
-	}
-
-	#add-choice-btn {
-		height: 60px;
-		width: 75px;
-		background-color: rgb(30, 159, 180);
-		border: 3px solid rgb(30, 159, 180);
-		/*box-shadow: 10px 7px 7px -5px gray;*/
-	}
-
-	#add-choice-btn {
-		border-top-left-radius: 5px;
-		border-bottom-left-radius: 5px;
-	}
-
-	#clear-choice-btn {
-		border-top-right-radius: 5px;
-		border-bottom-right-radius: 5px;
-	}
-
-	span.glyphicon {
-		font-size: 2.25em;
-		position: relative;
-	}
-
-	.glyphicon-left {
-		color: white;
-		top: 0;
-		/*left: 5;*/
-	}
-
-	label.label-floatlabel {
-		padding-left: 17px;
-	}
-
-	.choice-options {
-		width: 50px;
-	}
-
-	#content {
-		border: 5px solid rgb(30, 159, 180);
-		border-radius: 15px;
-		margin-top: 100px;
-		background-color: white;
-		padding-left: 32px;
-		padding-right: 32px;
-	}
-	#choice-input-group {
-		box-shadow: 0 7px 7px -5px gray;
-		height: 60px;
-		margin: 25px 0px;
-	}
-
-	header.header-area {
-		background-color: #2C303F;
-	}
-
-	#contact-recaptcha {
-	}
-
-	#contact-recaptcha body {
-		font-family: 'Raleway';
-	}
-
-	#choice {
-		/*margin: 25px 0px;*/
-	}
-
-	#choices-table {
-		margin-top: 12px;
-	}
-
-	#title {
-		margin: 25px 0px 0px 0px;
-		text-align: center;
-		font-size: 3em;
-		color: rgb(30, 159, 180);
-	}
-
-	#choices-instructions {
-		margin-top: 12px;
-	}
-
-	#title-hrule {
-		color: rgb(30, 159, 180);
-		width: 100%;
-		margin-bottom: 20px;
-		margin-top: 5px;
-	}
-	#company-name{
-		font-size: 40px;
-		font-family: 'Montserrat',sans-serif;
-		margin-top: 10px;
-		float: left;
-		font-weight: 700;
-	}
-
-	.footer-text{
-		font-size: 20px;
-		padding-top: 0px;
-		font-family: 'Roboto', sans-serif;
-		font-weight: 300;
-		line-height: 24px;
-	}
-</style>
+	<link rel="stylesheet" href="/css/bootstrap.min.css"><!-- bootstrap -->
+	<link href='http://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'><!-- Google Raleway Font -->
+	<link rel="stylesheet" href="/css/views/create.css" media="screen" title="no title" charset="utf-8"> <!-- create css -->
 {{/yield-styles}}
 
 <div id="content" class="container">
@@ -181,98 +33,20 @@
 					<th>Choice</th>
 				</tr>
 			</thead>
-		<tbody>
-			<tr ng-repeat="choice in choices">
-		<td class="choice-options">
-		<button class="btn btn-danger btn-xs" ng-click="removeChoice($index)">Remove</button>
-			</td>
-			<td>{[{ choice }]}</td>
-			</tr>
-		</tbody>
+			<tbody>
+				<tr ng-repeat="choice in choices">
+					<td class="choice-options">
+						<button class="btn btn-danger btn-xs" ng-click="removeChoice($index)">Remove</button>
+					</td>
+					<td>{[{ choice }]}</td>
+				</tr>
+			</tbody>
 		</table>
-		<p id="choices-instructions" ng-hide="choices.length > 0">Add choices to your poll to continue.</p>
+			<p id="choices-instructions" ng-hide="choices.length > 0">Add choices to your poll to continue.</p>
 	</div>
-
 {{#yield-scripts}}
-<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-<script value="test"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular.min.js"></script>
-<script src='https://www.google.com/recaptcha/api.js?onload=vcRecaptchaApiLoaded&render=explicit async defer'></script>
-<script>
-(function() {
-$( '#create-poll-nav' ).addClass('active');
-var app = angular.module('pollCreateApp', []);
-
-app.config(function ($interpolateProvider) {
- $interpolateProvider.startSymbol('{[{').endSymbol('}]}');
-});
-
-app.factory('pollService', function($http) {
-return {
-	savePoll: function(data, cb) {
-		$http.post('/polls/create', data).success(cb);
-	}
-}
-});
-
-app.controller('PollCreateCtrl', function( $scope, pollService ) {
-
-$scope.choices = [];
-
-$scope.recaptchaResponse = null;
-$scope.choiceNew = "";
-$scope.choiceEdit = "";
-
-$scope.question = "";
-
-$scope.poll = {};
-
-$scope.addQuestion = function()
-{
-	console.log('question added');
-};
-
-$scope.removeChoice = function(index)
-{
-	$scope.choices.splice(index, 1);
-};
-
-$scope.addChoice = function()
-{
-	if($scope.choices.indexOf($scope.choiceNew) === -1)
-	{
-		$scope.choices.push($scope.choiceNew);
-		$scope.choiceNew = '';
-		console.log($scope.choices);
-	} else {
-		console.log('Duplicate choices are not allowed.');
-	}
-};
-
-$scope.submitPoll = function() {
-
-	$scope.recaptchaResponse = $( '#g-recaptcha-response' ).val();
-	console.log($scope.recaptchaResponse);
-
-	$scope.poll = {
-		question: $scope.question,
-		choices: $scope.choices,
-		recaptchaResponse: $scope.recaptchaResponse
-	};
-
-	pollService.savePoll($scope.poll, function(data, status) {
-		console.log(data);
-		if(status === 200)
-		{
-			var redirectUrl = data.code + '?token=' + data.token;
-			window.location = redirectUrl;
-		} else if(status === 403) {
-			// some dom element flash message about failure
-		}
-	});
-};
-
-});
-}());
-</script>
+	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script><!-- jquery -->
+	<script src="/js/angular/angular.min.js"></script><!-- angular -->
+	<script src='/js/angular/angular-recaptcha.js'></script><!-- angular recaptcha -->
+	<script src="/js/views/create_angular.js"></script><!-- create_angular -->
 {{/yield-scripts}}
