--- a/views/layouts/default.html
+++ b/views/layouts/default.html
@@ -1,111 +1,48 @@
 <html ng-app='pollCreateApp'>
 	<head>
 		<title>{{title}}</title>
-		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-		
-		    <meta charset="utf-8">
-    	<title>Poll Genius</title>
-    	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    	<meta name="description" content="">
-    	<meta name="keywords" content="">
-	
-    	<link rel="shortcut icon" href="img/favicon.ico">
-	
-    	<link type="text/css" rel="stylesheet" href="/css/bootstrap.css"><!-- bootstrap.css -->
-    	<link type="text/css" rel="stylesheet" href="/css/font-awesome.min.css"><!-- font-awesome -->
-    	<link type="text/css" rel="stylesheet" href="/css/animate.min.css"><!-- animate css -->
-    	<link type="text/css" rel="stylesheet" href="/css/order-form.css"><!-- animate css -->
-    	<link rel="stylesheet" type="text/css" href="/css/angular-chart.css"><!-- angular chart css -->
-    	<link type="text/css" rel="stylesheet" href="/css/style.css"><!-- page styling -->
-	
+
+		<script type="text/javascript" src="/js/jquery/jquery.js"></script><!-- jquery -->
+		<script type="text/javascript" src="/js/bootstrap.js"></script><!-- Bootstrap Js -->
+
+		  	<meta charset="utf-8">
+    		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    		<meta name="description" content="">
+    		<meta name="keywords" content="">
+
+	    	<link rel="shortcut icon" href="img/favicon.ico">
+				<link rel="stylesheet" href="/css/bootstrap.min.css"><!-- bootstrap css -->
+    		<link type="text/css" rel="stylesheet" href="/css/font-awesome.min.css"><!-- font-awesome -->
+    		<link type="text/css" rel="stylesheet" href="/css/animate.min.css"><!-- animate css -->
+    		<link type="text/css" rel="stylesheet" href="/css/style.css"><!-- page styling -->
+
 		<!-- Google Fonts -->
-		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Roboto:100,300,100italic,300italic,400,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+			<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+			<link href='http://fonts.googleapis.com/css?family=Roboto:100,300,100italic,300italic,400,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+		<!-- ============ -->
+
+		<staticContent>
+		    <remove fileExtension=".woff" />
+		    <remove fileExtension=".woff2" />
+		    <mimeMap fileExtension=".woff" mimeType="/fonts/glyphicons-halflings-regular" />
+		    <mimeMap fileExtension=".woff2" mimeType="/fonts/glyphicons-halflings-regular" />
+		</staticContent>
+
 		{{{yield-styles}}}
 	</head>
 	<body ng-controller="PollCreateCtrl">
 
 		<!-- for facebook api -->
 		<div id="fb-root"></div>
-		<script>
-		  window.fbAsyncInit = function() {
-		    FB.init({
-		      appId      : '1090702837625972',
-		      xfbml      : true,
-		      version    : 'v2.4'
-		    });
-
-			// FB.getLoginStatus(function(response) {
-			//   if (response.status === 'connected') {
-			//     console.log('Logged in.');
-			//   }
-			//   else {
-			//     FB.login();
-			//   }
-			// });
-
-		  };
-		  (function(d, s, id){
-		     var js, fjs = d.getElementsByTagName(s)[0];
-		     if (d.getElementById(id)) {return;}
-		     js = d.createElement(s); js.id = id;
-		     js.src = "//connect.facebook.net/en_US/sdk.js";
-		     fjs.parentNode.insertBefore(js, fjs);
-		   }(document, 'script', 'facebook-jssdk'));
-		</script>
-
 		{{> navbar}}
 		{{{ yield }}}
 		{{> footer}}
 
-		<script src="/socket.io/socket.io.js"></script><!-- socket.io -->
-		<script type="text/javascript" src="/js/jquery.js"></script><!-- jquery -->
-		<script type="text/javascript" src="/js/bootstrap.js"></script><!-- Bootstrap Js -->
-		<script type="text/javascript" src="/js/jquery.flexslider.js"></script><!-- Flexslider Js -->
-		<script type="text/javascript" src="/js/flexslider-settings.js"></script><!-- Flexslider Settings Js -->
-		<script type="text/javascript" src="/js/isotope.pkgd.js"></script><!-- Isotope packaged -->
-		<script type="text/javascript" src="/js/jquery.appear.js"></script><!-- Appear Js -->
-		<script type="text/javascript" src="/js/jquery-scrollToFixed.js"></script><!-- Scroll To Fixed Js -->
-		<script type="text/javascript" src="/js/settings.js"></script><!-- Settings Js -->
-		<script type="text/javascript">
-    
-    $(window).resize(function(){
-
-        if ($(window).width() < 991)
-        {
-            $('ul.company-info').removeClass('pull-right').css('margin-right','45px');
-
-        } else {
-
-            $('ul.company-info').addClass('pull-right').css('margin-right','0px');
-
-        }
-      
-    });
-</script>
-
-<!-- for twitter api -->
-<script>
-	window.twttr = (function(d, s, id) {
-	  var js, fjs = d.getElementsByTagName(s)[0],
-	    t = window.twttr || {};
-	  if (d.getElementById(id)) return t;
-	  js = d.createElement(s);
-	  js.id = id;
-	  js.src = "https://platform.twitter.com/widgets.js";
-	  fjs.parentNode.insertBefore(js, fjs);
-	 
-	  t._e = [];
-	  t.ready = function(f) {
-	    t._e.push(f);
-	  };
-	 
-	  return t;
-	}(document, "script", "twitter-wjs"));
-</script>
-
+			<script src="/socket.io/socket.io.js"></script><!-- socket.io -->
+			<script type="text/javascript" src="/js/jquery/jquery.appear.js"></script><!-- Appear Js -->
+			<script type="text/javascript" src="/js/jquery/jquery-scrollToFixed.js"></script><!-- Scroll To Fixed Js -->
+			<script type="text/javascript" src="/js/settings.js"></script><!-- Settings Js -->
+			<script type="text/javascript" src="/js/views/default_js.js"></script><!-- Default Js -->
 		{{{yield-scripts}}}
 	</body>
 </html>
