--- a/views/layouts/default.html
+++ b/views/layouts/default.html
@@ -1,23 +1,17 @@
 <html ng-app='pollCreateApp'>
 	<head>
-		<title>{{title}}</title>
-		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-		
-			<meta charset="utf-8">
-		<title>Poll Genius</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		<meta charset="utf-8">
 		<meta name="description" content="">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		<title>{{title}}</title>
+		<script src="/js/jquery.js"></script>
+		<script src="/js/bootstrap.js"></script>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		<title>Poll Genius</title>
 		<meta name="keywords" content="">
-	
 		<link rel="shortcut icon" href="img/favicon.ico">
-	
-		<link type="text/css" rel="stylesheet" href="/css/bootstrap.css"><!-- bootstrap.css -->
 		<link type="text/css" rel="stylesheet" href="/css/font-awesome.min.css"><!-- font-awesome -->
 		<link type="text/css" rel="stylesheet" href="/css/animate.min.css"><!-- animate css -->
-		<link type="text/css" rel="stylesheet" href="/css/order-form.css"><!-- animate css -->
-		<link rel="stylesheet" type="text/css" href="/css/angular-chart.css"><!-- angular chart css -->
 		<link type="text/css" rel="stylesheet" href="/css/style.css"><!-- page styling -->
 	
 		<!-- Google Fonts -->
@@ -36,16 +30,6 @@
 			  xfbml      : true,
 			  version    : 'v2.4'
 			});
-
-			// FB.getLoginStatus(function(response) {
-			//   if (response.status === 'connected') {
-			//     console.log('Logged in.');
-			//   }
-			//   else {
-			//     FB.login();
-			//   }
-			// });
-
 		  };
 		  (function(d, s, id){
 			 var js, fjs = d.getElementsByTagName(s)[0];
@@ -63,9 +47,6 @@
 		<script src="/socket.io/socket.io.js"></script><!-- socket.io -->
 		<script type="text/javascript" src="/js/jquery.js"></script><!-- jquery -->
 		<script type="text/javascript" src="/js/bootstrap.js"></script><!-- Bootstrap Js -->
-		<script type="text/javascript" src="/js/jquery.flexslider.js"></script><!-- Flexslider Js -->
-		<script type="text/javascript" src="/js/flexslider-settings.js"></script><!-- Flexslider Settings Js -->
-		<script type="text/javascript" src="/js/isotope.pkgd.js"></script><!-- Isotope packaged -->
 		<script type="text/javascript" src="/js/jquery.appear.js"></script><!-- Appear Js -->
 		<script type="text/javascript" src="/js/jquery-scrollToFixed.js"></script><!-- Scroll To Fixed Js -->
 		<script type="text/javascript" src="/js/settings.js"></script><!-- Settings Js -->
@@ -89,12 +70,12 @@
 	  js.id = id;
 	  js.src = "https://platform.twitter.com/widgets.js";
 	  fjs.parentNode.insertBefore(js, fjs);
-	 
+
 	  t._e = [];
 	  t.ready = function(f) {
 		t._e.push(f);
 	  };
-	 
+
 	  return t;
 	}(document, "script", "twitter-wjs"));
 </script>
