Added recaptcha site key

--- a/views/create.html
+++ b/views/create.html
@@ -164,7 +164,7 @@
 					</span>
 				<input type="text" class="form-control choice" id="choice" placeholder="Add a choice to your poll..." ng-model="choiceNew" required>
 				</div>
-				<div id="contact-recaptcha" class="g-recaptcha" data-sitekey="6LfMyQkTAAAAAAn4sMfHHYRHiFgARWdlMEmRLDcG"></div>
+				<div id="contact-recaptcha" class="g-recaptcha" data-sitekey="{{site_key}}"></div>
 			</form>
 		</div>
 	</div>
