Footer and legend updates

--- a/views/includes/footer.html
+++ b/views/includes/footer.html
@@ -31,6 +31,9 @@
                 </ul>
             </div>
             <!-- End: Footer Address -->
+            <div style="text-align: center" class="row">
+                <p style="font-size: 15px">Built with <a href="http://mean.io/#!/">MEAN</a> deployed with <a href="https://warpspeed.io">WarpSpeed</a></p>
+            </div>
         </div>
     </div>
 </div>
