--- a/views/results.html
+++ b/views/results.html
@@ -203,7 +203,7 @@ ul.pie-legend.col-md-4{
 }
 
 .legend-wrapper {
-	margin: 3px 0px;
+	margin: 5px 0px;
 }
 
 .footer-text{
@@ -245,8 +245,8 @@ ul.pie-legend.col-md-4{
 div.col-md-8{
 	border: 3px white solid;
 }
-.social-media {
-
+.legend-label {
+	padding-top: 4px;
 }
 .media-wrapper {
 	float: left;
