--- a/views/all.html
+++ b/views/all.html
@@ -1,64 +1,5 @@
 {{#yield-styles}}
-<style type="text/css">
-	html,body{
-		background-color: #212635;
-	}
-	div.container.holder{
-		margin-top: 120px;
-	}
-	.poll_code,.question, .poll-link{
-		text-align: center;
-	}
-
-	.question {
-		margin-top: 8px;
-		color: #575554;
-	}
-
-	@media screen and (min-width:0px) and (max-width: 500px){
-		canvas{
-			height: 100px;
-			width: 100px;
-		}
-	}
-	@media screen and (min-width: 501px) and (max-width: 640px){
-		canvas{
-			height: 150px;
-			width: 150px;
-		}
-	}
-	@media screen and (min-width: 641px) and (max-width: 991px){
-		canvas{
-			/*margin-left:0px;*/
-			height: 200px;
-			width: 200px;
-		}
-	}
-	@media screen and (min-width: 992px) and (max-width: 1200px){
-		canvas{
-			/*margin-left: 50px;*/
-			height: 200px;
-			width: 200px;
-		}
-	}
-	@media screen and (min-width: 1201px) and (max-width: 1999px){
-		canvas{
-			/*margin-left: 80px;*/
-			height: 200px;
-			width: 200px;
-		}
-	}
-
-	.glyphicon {
-		font-size: 3em;
-		font-weight: bold;
-	}
-
-	.three-by-one {
-		margin: 10px 0px;
-	}
-
-</style>
+<link rel="stylesheet" href="css/views/all.css" media="screen" title="no title" charset="utf-8">
 {{/yield-styles}}
 
 <!-- all polls container -->
@@ -78,14 +19,6 @@
     <li class="next"><a href="/polls?page={{next}}">Older <span aria-hidden="true">&rarr;</span></a></li>
   </ul>
 </nav>
-
-<script type="text/javascript">
-	var number = 0;
-	$(document).ready(function() {
-		$.each( $('.col-xs-4'), function (index, value) {
-			$(this).prepend('<canvas id="'+ $('.poll_code')[number].innerHTML +'" class="multiple-results" width="200px" height="200px" ></canvas> ');
-			number++;
-		});
 
 	<script type="text/javascript" src="/js/views/all_js.js"></script> <!-- all js-->
 {{#yield-scripts}}
