Poll floats beside legend despite legend's height

--- a/views/results.html
+++ b/views/results.html
@@ -140,10 +140,6 @@ div.chatArea{
  	margin-bottom: 0px;
  	/*width: 100%;*/
  }
-
- #pollContainer {
- 	text-align: center;
- }
  .inputMessage{
 		bottom: 0;
     position: absolute;
@@ -185,9 +181,7 @@ li.col-md-6{
 	margin: 0px 0px;
 	padding: 0px 0px;
 	width: 25%;
-	position: relative;
-	top: 0;
-	left: 0;
+	float: left;
 }
 
 ul.pie-legend.col-md-4{
